--- a/Index.html
+++ b/Index.html
@@ -38,6 +38,7 @@
     </div>
 
     <footer>
+        <div class="footer">
         <div>
             <img src="" alt="A1-Cares">
             <p>Download the BinQasem app and get notifications when new actions start or there's any update yo your items.</p>
@@ -74,6 +75,7 @@
                 <li>Lorem Ipsum</li>
             </ul>
         </div>
+    </div>
     </footer>
     <script src="main.js"></script>
 </body>
